bump recommended java version to 17 in README.md (#2864)
* bump recommended java version to 17 in README.md

* Polish English.

---------

Co-authored-by: nathan.xu <nathan.xu@procor.com>
Co-authored-by: Gary Russell <grussell@vmware.com>